[tool.poetry]
name = "robot"
version = "0.2.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
asyncio = "3.4.3"
certifi = "2020.12.5"
chardet = "4.0.0"
idna = "2.10"
numpy = "1.20.1"
pandas = "1.2.3"
PyMySQL = "1.0.2"
python-dateutil = "2.8.1"
pytz = "2021.1"
requests = "2.25.1"
six = "1.15.0"
urllib3 = "1.26.4"
websockets = "8.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
